apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app
  namespace: blog
  labels:
    app: blog
spec:
  type: NodePort
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
